fixed current day grid on safari

--- a/src/style.css
+++ b/src/style.css
@@ -118,6 +118,7 @@ body {
 .current-weather-metadata {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     gap: 1rem;
 }
 
